--- a/site.html
+++ b/site.html
@@ -17,10 +17,37 @@
 		     var js, fjs = d.getElementsByTagName(s)[0];
 		     if (d.getElementById(id)) {return;}
 		     js = d.createElement(s); js.id = id;
-		     js.src = "//connect.facebook.net/en_US/sdk.js";
+		     // js.src = "//connect.facebook.net/en_US/sdk.js";
+		     js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.6&appId=1764257143815281";
 		     fjs.parentNode.insertBefore(js, fjs);
 		   }(document, 'script', 'facebook-jssdk'));
+		</script>	
+<!-- <script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.6&appId=1764257143815281";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script> -->
+
+<!-- 		<script>
+			window.fbAsyncInit = function() {
+			FB.init({
+			appId : '1764257143815281',
+			xfbml : true,
+			version : 'v2.5'
+			});
+			};
+			(function(d, s, id){
+			var js,
+			fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) {return;}
+			js = d.createElement(s); js.id = id;
+			js.src = "// connect.facebook.net/en_US/sdk/xfbml.sendtomessenger.js ";
+			fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebookjssdk'));
 		</script>
+ -->
 
 		<h1 id="fb-welcome">Test site 123</h1>
 		<div
@@ -29,34 +56,74 @@
 		  data-width="450"
 		  data-show-faces="true">
 		</div>
+		<button onclick="sendTextMessage()">send</button>
 
 		<!-- TESTSTSST -->
+<!-- 
+		<div class="fake_button"><svg width="30" height="28" viewBox="0 0 30 28" xmlns="http://www.w3.org/2000/svg"><title>Shape</title><path d="M15.134.388C7.236.388.834 6.03.834 12.992c0 3.966 2.08 7.504 5.33 9.815v4.805l4.868-2.543c1.3.34 2.676.526 4.102.526 7.897 0 14.3-5.643 14.3-12.604 0-6.96-6.403-12.604-14.3-12.604zm1.42 16.973l-3.64-3.696-7.106 3.697 7.816-7.897 3.73 3.697 7.017-3.697-7.815 7.898z" fill="#FFF" fill-rule="evenodd"></path></svg> <span>Message Me</span></div> -->
+
+<!-- 		<div class="fake_button"><svg width="30" height="28" viewBox="0 0 30 28" xmlns="http://www.w3.org/2000/svg"><title>Shape</title><path d="M15.134.388C7.236.388.834 6.03.834 12.992c0 3.966 2.08 7.504 5.33 9.815v4.805l4.868-2.543c1.3.34 2.676.526 4.102.526 7.897 0 14.3-5.643 14.3-12.604 0-6.96-6.403-12.604-14.3-12.604zm1.42 16.973l-3.64-3.696-7.106 3.697 7.816-7.897 3.73 3.697 7.017-3.697-7.815 7.898z" fill="#FFF" fill-rule="evenodd"></path></svg> <span>Message Me</span></div> -->
+
+<!-- 		<div class="fb-send-to-messenger" 
+		  messenger_app_id="1764257143815281" 
+		  page_id="1633812723609744" 
+		  data-ref='{
+			  "object":"page",
+			  "entry":[
+			    {
+			      "id":1633812723609744,
+			      "time":12341,
+			      "messaging":[
+			        {
+			          "sender":{
+			            "id":"USER_ID_1284627"
+			          },
+			          "recipient":{
+			            "id":"1633812723609744"
+			          },
+			          "timestamp":1234567890,
+			          "optin":{
+			            "ref":"PASS_THROUGH_PARAM"
+			          }
+			        }
+			      ]
+			    }
+			  ]
+			}' 
+		  color="blue" 
+		  size="xlarge">
+	  	</div>	 -->
 
 		<div class="fb-send-to-messenger" 
 		  messenger_app_id="1764257143815281" 
 		  page_id="1633812723609744" 
-		  data-ref="PASS_THROUGH_PARAM" 
+		  data-ref="SomeFBToken"
 		  color="blue" 
-		  size="xlarge">  
-	  	</div>
+		  size="xlarge">
+	  	</div>	
 
+<!-- 	  	<div class="fb-messengermessageus" 
+		  messenger_app_id="1764257143815281" 
+		  page_id="1633812723609744"
+		  color="blue"
+		  size="xlarge" >		  	
+	  	</div>	 -->
+
+	  	<div class="fbmessengertoggle"
+			messenger_app_id="1764257143815281"
+			token="10208511536638500"></div>
+
+		<!-- <div id="test"><span class="_31ab"><i class="_h2g img sp_rIyOFGTOMUR sx_867d3a"></i><span><span></span>Message Us</span></span></div> -->
+		<hr>
+		<div id="fb-root"></div>
+		<div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
 		<div class="fb-send-to-messenger" 
-		  messenger_app_id="247307772084085" 
-		  page_id="788720331154519" 
-		  data-ref="PASS_THROUGH_PARAM" 
-		  color="blue" 
-		  size="standard">	
-		  <a href="https://m.me/788720331154519" target="_blank" id="u_0_1"><div class="_17n4 _17n8"><div class="_17n9"><div class="_5x83"><span class="_31ab"><i class="_h2g img sp_rIyOFGTOMUR sx_867d3a"></i><span><span></span>Message Us</span></span></div></div></div></a>	  
-	  	</div>
-
-		<div class="fb-send-to-messenger" 
-		  messenger_app_id="247307772084085" 
-		  page_id="788720331154519" 
-		  color="blue" 
-		  size="standard">	
-		  <a href="https://m.me/788720331154519" target="_blank" id="u_0_1">Message Us</a>	  
-	  	</div>
-
+		messenger_app_id="1764257143815281" 
+		page_id="1633812723609744" 
+		dataref="PASS_THROUGH_PARAM_BREWDOGGYDOG" 
+		color="blue" 
+		size="large">			
+		</div>
 	</body>
 </html>
 
